# TimeTracking

./: CLAUDE.md  README.md  pyproject.toml
src/timetracking/: __init__.py  cli.py  git_hook.py  reports.py  session.py  storage.py
tests/: __init__.py  test_session.py  test_storage.py
