[project]
name = "timetracking"
version = "0.1.0"
description = "A simple CLI time tracker that logs work sessions and git commits to CSV"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.1.0",
    "typer>=0.19.2",
]

[project.scripts]
track = "timetracking.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
